--- a/postes.html
+++ b/postes.html
@@ -86,7 +86,7 @@
               </ul> -->
               <ul>
                 <li class="header-navigation-item active">
-                  <a href="col-vetements.html">Vêtments</a>
+                  <a href="col-vetements.html">Vêtements</a>
                 </li>
                 <li class="header-subnav header-navigation-item">
                   <ul>
@@ -136,8 +136,8 @@
         <h1 class="heading title">Postes</h1>
       </header>
       <div class="postes">
-          <h1>Créateur / Créatrice en art textile et impression</h1>
           <ul class="postes-item">
+          	<li><h1>Créateur / Créatrice en art textile et impression</h1></li>
             <li>• Couture manuelle</li>
             <li>• Dessin technique</li>
             <li>• Mode et styles vestimentaires</li>
@@ -145,8 +145,8 @@
             <li><STRONG>Bac+3 Recommandé</STRONG></li>
             <li>Salaire: 1600 Euros</li>
           </ul>
-          <h1>Styliste</h1>
           <ul class="postes-item">
+          	<li><h1>Styliste</h1></li>
             <li>• Créer les nouvelles collections</li>
             <li>• Surveiller les tendances de la mode et analyser les phénomènes de société</li>
             <li>• Avoir des travaux techniques et le sens du marketing</li>
@@ -155,8 +155,8 @@
             <li>MS - ingénierie textile</li>
             <li>Salaire: 2400 Euros</li>
           </ul>
-          <h1>Assistante styliste</h1>
           <ul class="postes-item">
+          	<li><h1>Assistante styliste</h1></li>          	
             <li>• Aider à la conception des collections commandées</li>
             <li>• Récupérer des échantillons de tissus pour aider le styliste</li>
             <li>• Organisé, rigoureux et réactif</li>
