--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       <source src="src/accueil.mp4" type="video/mp4">
     </video> -->
     <iframe class="video" src="https://youtube.com/embed/xKh01uAcjKM?autoplay=1&mute=1&controls=0&loop=1"></iframe>
+    <div class="video-layer"></div>
     <!-- <div class="video">
 
     </div> -->
